Bug 487421: [1.9][batch] Support Java 9 options in command line compiler - 1. steps towards back-to-back testing
Change-Id: If4f7702e9e0e7e5f0f83b725063377a1bc173d1b